Add Service No External IP policy for CVE-2020-8554
Signed-off-by: Dustin Decker <dustindecker@protonmail.com>

--- a/charts/k-rail/values.yaml
+++ b/charts/k-rail/values.yaml
@@ -120,6 +120,9 @@ config:
     - name: "role_binding_no_anonymous_subject"
       enabled: True
       report_only: False
+    - name: "service_no_external_ip"
+      enabled: True
+      report_only: False
 
 exemptions:
   - resource_name: "*"
